# m8flow-connectors

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml
connectors/connector-salesforce/: .gitignore  README.md  pyproject.toml
connectors/connector-salesforce/src/connector_salesforce/: __init__.py  connector_interface.py  field_mapping.py  salesforce_client.py
connectors/connector-salesforce/src/connector_salesforce/commands/: __init__.py  create_contact.py  create_lead.py  delete_contact.py  delete_lead.py  read_contact.py  read_lead.py  update_contact.py  update_lead.py
connectors/connector-salesforce/tests/: __init__.py
connectors/connector-salesforce/tests/connector_salesforce/: __init__.py
connectors/connector-salesforce/tests/connector_salesforce/unit/: __init__.py  test_create_contact.py  test_create_lead.py  test_delete_lead.py  (+7 more)
connectors/connector-slack/: README.md  pyproject.toml
connectors/connector-slack/src/connector_slack/: connector_interface.py  slack_client.py
connectors/connector-stripe/: README.md  pyproject.toml
connectors/connector-stripe/docs/: STRIPE_CONNECTOR_SETUP.md
connectors/connector-stripe/src/connector_stripe/: __init__.py  connector_interface.py  stripe_client.py  validation.py
connectors/connector-stripe/src/connector_stripe/commands/: __init__.py  cancel_subscription.py  create_charge.py  create_payment_intent.py  create_subscription.py  issue_refund.py
connectors/connector-stripe/tests/: __init__.py
connectors/connector-stripe/tests/connector_stripe/: __init__.py
connectors/connector-stripe/tests/connector_stripe/unit/: __init__.py  test_cancel_subscription.py  test_create_charge.py  test_create_payment_intent.py  test_create_subscription.py  test_issue_refund.py  test_stripe_errors.py  test_validation.py
connectors/m8flow-connector-github/: README.md  pyproject.toml
connectors/m8flow-connector-github/src/connector_github/: connector_interface.py  github_client.py
connectors/m8flow-connector-n8n/: README.md  pyproject.toml
connectors/m8flow-connector-n8n/examples/: README.md  sample-payload.json  sample-trigger-workflow.bpmn
connectors/m8flow-connector-n8n/src/connector_n8n/: __init__.py  connector_interface.py  n8n_client.py  validation.py
connectors/m8flow-connector-n8n/src/connector_n8n/commands/: __init__.py  execute_workflow.py  get_execution.py  get_workflow.py  get_workflow_webhooks.py  invoke_webhook.py  list_executions.py  list_workflows.py  trigger_workflow.py
connectors/m8flow-connector-n8n/tests/connector_n8n/unit/: test_execute_workflow.py  test_get_execution.py  test_get_workflow.py  test_get_workflow_webhooks.py  test_invoke_webhook.py  test_list_executions.py  test_list_workflows.py  test_n8n_client.py  test_n8n_errors.py  test_trigger_workflow.py  test_validation.py
connectors/m8flow-connector-slack/src/connector_slack/: connector_interface.py  slack_client.py
connectors/m8flow-connector-smtp/: pyproject.toml
connectors/m8flow-connector-stripe/src/connector_stripe/: stripe_client.py
slack-upload-test/: README.md
(+25 files in other folders)
