[tool.poetry]
name = "connector_stripe"
version = "1.0.0"
description = "Stripe connector for m8flow: Payment intents, charges, subscriptions, and refunds with idempotency"
authors = []
readme = "README.md"
packages = [{include = "connector_stripe", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.6.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "B",   # flake8-bugbear
  "C",   # mccabe
  "E",   # pycodestyle error
  "F",   # pyflakes
  "N",   # pep8-naming
  "PL",  # pylint
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle warning
  "I001" # isort
]

ignore = [
  "C901",
  "PLR",
  "PLE1205"
]

line-length = 130
target-version = "py310"

exclude = [
  "migrations"
]

[tool.ruff.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.isort]
force-single-line = true

[tool.mypy]
strict = true
disallow_any_generics = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
